fix for missing search box and alignment.

--- a/48d Montage.css
+++ b/48d Montage.css
@@ -464,7 +464,8 @@ body{
     width: 1024px;
     margin: 0 auto;
     display: flex;
-    align-items: center;    
+    align-items: center; 
+    justify-content: space-between;   
 }
 
 .nav{
